Added some content

--- a/index.html
+++ b/index.html
@@ -22,14 +22,52 @@
     <div id="main">
       <ul>
         <li class="link" onclick="showContent(event, 'about')">About</li>
-        <div id="about" class="content">Testing this bad boy</div>
+        <div id="about" class="content card">
+          <p>
+            Having studied graphic design and worked in print for most of his
+            career, Jens decided to take a dive into the world of web
+            development. After all, when he was 15, he had made several HTML and
+            CSS only websites(he will never forget the Geocities days).
+          </p>
+          <br />
+          <p>
+            He knew that the most important things were a thirst for knowledge
+            and a knack for problem solving, both of which he had plenty. So he
+            set out to do several courses after work hours, namely Udemy courses
+            from popular developers such as Brad Traversy, Mosh Hamedani and Max
+            from Academind, just to name a few.
+          </p>
+        </div>
         <li class="link" onclick="showContent(event, 'skills')">
           Skills & Technologies
         </li>
-        <div id="skills" class="content">Also this bad boy</div>
+        <div id="skills" class="content card">
+          <div class="skills-list">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+            </ul>
+            <ul>
+              <li>Vue</li>
+              <li>Node</li>
+              <li>Sass</li>
+            </ul>
+            <ul>
+              <li>MongoDB</li>
+              <li>SQL</li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
 
         <li class="link" onclick="showContent(event,'projects')">Projects</li>
-        <div id="projects" class="content">Projects</div>
+        <div id="projects" class="content card">
+          <div class="project">
+            <div class="project">N-Up Calculator</div>
+            <div class="project-thumbnail"></div>
+          </div>
+        </div>
 
         <li>Education</li>
         <li>Contact</li>
