Fixed firefox issue

--- a/index.html
+++ b/index.html
@@ -30,18 +30,28 @@
         <li class="link" onclick="showContent(event, 'about')">About</li>
         <div id="about" class="content card">
           <p>
-            Having studied graphic design and worked in print for most of his
-            career, Jens decided to take a dive into the world of web
-            development. After all, when he was 15, he had made several HTML and
-            CSS only websites(he will never forget the Geocities days).
+            Having studied graphic design and worked in print for most of my
+            career, I took a digital turn and dove into the world of web
+            development. As a teenager, i spent a lot of time building HTML and
+            CSS only websites and after a long hiatus, decided to look deeper
+            into the world of development and programming.
           </p>
           <br />
           <p>
-            He knew that the most important things were a thirst for knowledge
-            and a knack for problem solving, both of which he had plenty. So he
-            set out to do several courses after work hours, namely Udemy courses
-            from popular developers such as Brad Traversy, Mosh Hamedani and Max
-            from Academind, just to name a few.
+            In the past year, I have extensively done online courses in the
+            fundamentals of HTML, CSS and Javascript. Additional courses include
+            Vue, NodeJS, MongoDB and SQL. I have managed to projects to solve
+            real live problems at the company for which I worked, please see the
+            projects section for more details.
+          </p>
+          <br />
+          <p>
+            I believe my graphic design knowledge will greatly benefit my web
+            development, especially in the frontend, however I do have an
+            affinity to working with data, databases and algorithms as well. In
+            my previous job I successfully implemented an automated quoting
+            system for a print shop using Excel and VBASIC which helped improve
+            productivity by at least tenfold.
           </p>
         </div>
         <li class="link" onclick="showContent(event, 'skills')">
@@ -70,23 +80,37 @@
               <li>Illustrator</li>
             </ul>
           </div>
+          <br />
           Fluent in English, German and Indonesian
         </div>
 
         <li class="link" onclick="showContent(event,'projects')">Projects</li>
         <div id="projects" class="content card">
-          <div class="project">
-            <h3>N-Up Calculator</h3>
-            <div class="project-thumbnail"></div>
-            <p>
-              This app was developed for the paper & print industry,
-              specifically the one at which I worked. It calculates the maximum
-              yield of a paper size out of a sheet of any given size.
-            </p>
+          <div class="projects">
+            <div class="project">
+              <h3>N-Up Calculator</h3>
+              <div class="project-thumbnail"></div>
+              <p>
+                This app was developed for the paper & print industry,
+                specifically the one at which I worked. It calculates the
+                maximum yield of a paper size out of a sheet of any given size.
+              </p>
+            </div>
+            <div class="project">
+              <h3>N-Up Calculator (Beta)</h3>
+              <div class="project-thumbnail"></div>
+              <p>
+                This app was developed for the paper & print industry,
+                specifically the one at which I worked. It calculates the
+                maximum yield of a paper size out of a sheet of any given size.
+              </p>
+            </div>
           </div>
         </div>
 
-        <li>Education</li>
+        <li class="link" onclick="showContent(event, 'education')">
+          Education
+        </li>
         <li>Contact</li>
       </ul>
     </div>
