Added more content and fixed some transitions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <title>Jens Adria - Web Developer</title>
+    <title>Jens Adria - Developer</title>
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
         /></a>
         <div class="name">
           <h1>Jens Adria</h1>
-          <p>Developer & Designer</p>
+          <p>Developer</p>
         </div>
       </div>
     </header>
@@ -66,8 +66,8 @@
             </ul>
             <ul>
               <li>Vue</li>
+              <li>Vuex</li>
               <li>Node</li>
-              <li>React</li>
             </ul>
             <ul>
               <li>MongoDB</li>
@@ -88,29 +88,79 @@
         <div id="projects" class="content card">
           <div class="projects">
             <div class="project">
-              <h3>N-Up Calculator</h3>
+              <h3>N-Up Calculator (BETA)</h3>
               <div class="project-thumbnail"></div>
               <p>
                 This app was developed for the paper & print industry,
                 specifically the one at which I worked. It calculates the
                 maximum yield of a paper size out of a sheet of any given size.
               </p>
+              <br />
+              <p>HTML, CSS, Vue, Vuex</p>
+              <div class="icons">
+                <a href="http://printpal.jensadria.net" title="Go to site"
+                  ><i class="icon fas fa-globe fa-2x"></i></a
+                ><i class="icon fab fa-github fa-2x"></i>
+              </div>
             </div>
             <div class="project">
-              <h3>N-Up Calculator (Beta)</h3>
+              <h3>Cutting List (BETA)</h3>
               <div class="project-thumbnail"></div>
               <p>
-                This app was developed for the paper & print industry,
-                specifically the one at which I worked. It calculates the
-                maximum yield of a paper size out of a sheet of any given size.
+                Another app for the printing industry. At the warehouse, big
+                sheets of paper get cut down to A4, then packaged and ready to
+                be sold. This program helps the team generate a cutting list
+                according to orders so the warehouse can cut the paper by
+                quantity and due date.
               </p>
+              <br />
+              <p>HTML, CSS, Vue, Vuex, Node, MongoDB</p>
+              <div class="icons">
+                <i class="icon fas fa-globe fa-2x"></i
+                ><i class="icon fab fa-github fa-2x"></i>
+              </div>
             </div>
           </div>
         </div>
 
         <li class="link" onclick="showContent(event, 'education')">
-          Education
+          Education & Work
         </li>
+        <div id="education" class="content card">
+          <div class="education">
+            <h3>Completed Online Courses</h3>
+            <ul>
+              <li>
+                Modern HTML & CSS From The Beginning (Including SASS) - Brad
+                Traversy (Udemy)
+              </li>
+              <li>
+                Modern JavaScript From The Beginning - Brad Traversy (Udemy)
+              </li>
+              <li>
+                20 Web Projects With Vanilla JavaScript - Brad Traversy (Udemy)
+              </li>
+              <li>
+                Vue - The Complete Guide (w/ Router, Vuex, Composition API) -
+                Academind (Udemy)
+              </li>
+              <li>
+                The Ultimate JavaScript Mastery Series - Part 1 & 2 - Mosh
+                Hamedani
+              </li>
+              <li>The Complete NodeJS Course - Mosh Hamedani</li>
+            </ul>
+            <br />
+            <h3>Bachelor of Arts (Graphic Design)</h3>
+            <p>Curtin University of Technology, Perth - Graduated 2010</p>
+            <br />
+            <h3>Apprenticeship as an Export Salesman</h3>
+            <p>Berufsschule Halle/Merseburg - Finished 2005</p>
+            <br />
+            <h3>Abitur</h3>
+            <p>Deutsche Schule(German School) Jakarta 2003</p>
+          </div>
+        </div>
         <li>Contact</li>
       </ul>
     </div>
