--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    /> -->
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -98,9 +105,20 @@
               <br />
               <p>HTML, CSS, Vue, Vuex</p>
               <div class="icons">
-                <a href="http://printpal.jensadria.net" title="Go to site"
-                  ><i class="icon fas fa-globe fa-2x"></i></a
-                ><i class="icon fab fa-github fa-2x"></i>
+                <a
+                  href="http://printpal.jensadria.net"
+                  title="Go to site"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="icon fas fa-globe fa-2x"></i
+                ></a>
+                <a
+                  href="https://github.com/jensadria/print-pal"
+                  title="Go To Repository"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="icon fab fa-github fa-2x"></i
+                ></a>
               </div>
             </div>
             <div class="project">
@@ -116,8 +134,14 @@
               <br />
               <p>HTML, CSS, Vue, Vuex, Node, MongoDB</p>
               <div class="icons">
-                <i class="icon fas fa-globe fa-2x"></i
-                ><i class="icon fab fa-github fa-2x"></i>
+                <i class="icon fas fa-globe fa-2x"></i>
+                <a
+                  href="https://github.com/jensadria/print-pal"
+                  title="Go To Repository"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="icon fab fa-github fa-2x"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -161,10 +185,20 @@
             <p>Deutsche Schule(German School) Jakarta 2003</p>
           </div>
         </div>
-        <li>Contact</li>
+        <li class="link" onclick="showContent(event, 'contact')">Contact</li>
+        <div id="contact" class="content card">
+          Contact Test Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Ratione corporis ea impedit odit cupiditate omnis et tenetur rerum
+          necessitatibus assumenda?
+        </div>
       </ul>
     </div>
 
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script> -->
     <script>
       function showContent(event, contentID) {
         const content = document.getElementById(contentID);
