Some content additions

--- a/index.html
+++ b/index.html
@@ -187,9 +187,15 @@
         </div>
         <li class="link" onclick="showContent(event, 'contact')">Contact</li>
         <div id="contact" class="content card">
-          Contact Test Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Ratione corporis ea impedit odit cupiditate omnis et tenetur rerum
-          necessitatibus assumenda?
+          <a href="mailto:jensadria@gmail.com"
+            ><i class="fas fa-envelope"></i></a
+          >E-mail <br />
+          <a
+            href="http://www.linkedin.com/in/jensadria"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-linkedin"></i></a
+          >LinkedIn
         </div>
       </ul>
     </div>
