more content changes

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
         <div id="about" class="content card">
           <p>
             Having studied graphic design and worked in print for most of my
-            career, I took a digital turn and dove into the world of web
-            development. As a teenager, i spent a lot of time building HTML and
-            CSS only websites and after a long hiatus, decided to look deeper
-            into the world of development and programming.
+            career, I decided to dive into the world of web development. I
+            worked with HTML and CSS in the past, creating numerous sites and
+            feel quite comfortable working with code.
           </p>
           <br />
           <p>
@@ -70,6 +69,7 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>Javascript</li>
+              <li>VBasic (Excel)</li>
             </ul>
             <ul>
               <li>Vue</li>
@@ -78,8 +78,8 @@
             </ul>
             <ul>
               <li>MongoDB</li>
-              <li>SQL</li>
               <li>Sass</li>
+              <li>Wordpress</li>
             </ul>
             <ul>
               <li>InDesign</li>
@@ -88,12 +88,17 @@
             </ul>
           </div>
           <br />
-          Fluent in English, German and Indonesian
+          Fluent in English, German and Indonesian. Basic French.
         </div>
 
         <li class="link" onclick="showContent(event,'projects')">Projects</li>
         <div id="projects" class="content card">
           <div class="projects">
+            <p>
+              The following projects are part of a "PrintPal" suite, a web app
+              designed to increase producticity at my current workplace, a paper
+              and printing company.
+            </p>
             <div class="project">
               <h3>N-Up Calculator (BETA)</h3>
               <div class="project-thumbnail"></div>
@@ -104,6 +109,19 @@
               </p>
               <br />
               <p>HTML, CSS, Vue, Vuex</p>
+            </div>
+            <div class="project">
+              <h3>Cutting List (BETA)</h3>
+              <div class="project-thumbnail"></div>
+              <p>
+                Another app for the printing industry. At the warehouse, big
+                sheets of paper get cut down to A4, then packaged and ready to
+                be sold. This program helps the team generate a cutting list
+                according to orders so the warehouse can cut the paper by
+                quantity and due date.
+              </p>
+              <br />
+              <p>HTML, CSS, Vue, Vuex, Node, MongoDB</p>
               <div class="icons">
                 <a
                   href="http://printpal.jensadria.net"
@@ -121,29 +139,6 @@
                 ></a>
               </div>
             </div>
-            <div class="project">
-              <h3>Cutting List (BETA)</h3>
-              <div class="project-thumbnail"></div>
-              <p>
-                Another app for the printing industry. At the warehouse, big
-                sheets of paper get cut down to A4, then packaged and ready to
-                be sold. This program helps the team generate a cutting list
-                according to orders so the warehouse can cut the paper by
-                quantity and due date.
-              </p>
-              <br />
-              <p>HTML, CSS, Vue, Vuex, Node, MongoDB</p>
-              <div class="icons">
-                <i class="icon fas fa-globe fa-2x"></i>
-                <a
-                  href="https://github.com/jensadria/print-pal"
-                  title="Go To Repository"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><i class="icon fab fa-github fa-2x"></i
-                ></a>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -152,6 +147,9 @@
         </li>
         <div id="education" class="content card">
           <div class="education">
+            <h3>Bachelor of Arts (Graphic Design)</h3>
+            <p>Curtin University of Technology, Perth - Graduated 2010</p>
+            <br />
             <h3>Completed Online Courses</h3>
             <ul>
               <li>
@@ -175,9 +173,7 @@
               <li>The Complete NodeJS Course - Mosh Hamedani</li>
             </ul>
             <br />
-            <h3>Bachelor of Arts (Graphic Design)</h3>
-            <p>Curtin University of Technology, Perth - Graduated 2010</p>
-            <br />
+
             <h3>Apprenticeship as an Export Salesman</h3>
             <p>Berufsschule Halle/Merseburg - Finished 2005</p>
             <br />
