--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-SYPD2Z7VP3"
+      src="https://www.googletagmanager.com/gtag/js?id=G-8VC627MDL1"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,17 +13,12 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-SYPD2Z7VP3');
+      gtag('config', 'G-8VC627MDL1');
     </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    /> -->
 
     <link
       rel="stylesheet"
