--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
             Having studied graphic design and worked in print for most of my
             career, I decided to dive into the world of web development. I
             worked with HTML and CSS in the past, creating numerous sites and
-            feel quite comfortable working with code.
+            love working with code.
           </p>
           <br />
           <p>
             In the past year, I have extensively done online courses in the
             fundamentals of HTML, CSS and Javascript. Additional courses include
-            Vue, NodeJS, MongoDB and SQL. I have managed to projects to solve
-            real live problems at the company for which I worked, please see the
-            projects section for more details.
+            Vue, NodeJS, MongoDB and SQL. I have managed to create projects to solve
+            real live problems at the company for which I worked (please see the
+            projects section for more details).
           </p>
           <br />
           <p>
