--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           </p>
           <br />
           <p>
-            In the past year, I have extensively done online courses in the
+            In the past year, I have extensively completed online courses in the
             fundamentals of HTML, CSS and Javascript. Additional courses include
-            Vue, NodeJS, MongoDB and SQL. I have managed to projects to solve
-            real live problems at the company for which I worked, please see the
-            projects section for more details.
+            Vue, NodeJS, MongoDB and SQL. I have managed to solve real live
+            problems at the company for which I worked, please see the projects
+            section for more details.
           </p>
           <br />
           <p>
@@ -66,7 +66,7 @@
             affinity to working with data, databases and algorithms as well. In
             my previous job I successfully implemented an automated quoting
             system for a print shop using Excel and VBASIC which helped improve
-            productivity by at least tenfold.
+            productivity by at least ten-fold.
           </p>
         </div>
         <li class="link" onclick="showContent(event, 'skills')">
@@ -78,12 +78,13 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>Javascript</li>
-              <li>VBasic (Excel)</li>
+              <li>C# (Basics)</li>
             </ul>
             <ul>
               <li>Vue</li>
               <li>Vuex</li>
               <li>Node</li>
+              <li>Vuetify</li>
             </ul>
             <ul>
               <li>MongoDB</li>
@@ -94,6 +95,7 @@
               <li>InDesign</li>
               <li>Photoshop</li>
               <li>Illustrator</li>
+              <li>Figma</li>
             </ul>
           </div>
           <br />
